--- a/style.css
+++ b/style.css
@@ -3,3 +3,17 @@ body {
   height: 100%;
   margin: 0;
 }
+header{
+  text-align: center;
+}
+img{
+  display: block;
+  margin: auto;
+}
+nav a{
+  padding: 0px 10px;
+  background-color: grey;
+}
+figcaption{
+  text-align: center;
+}
